// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather in displaying with favourite cities Some error with displaying weather 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div
      className="error"
    >
      Error: 
      error
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    >
      <div
        className="weather"
      >
        <div
          className="left"
        >
          <div>
            Moscow
          </div>
          <img
            src="https://openweathermap.org/img/wn/50n.png"
          />
          <div>
            -269
             °C
          </div>
          <button
            className="button"
            onClick={[Function]}
          >
            Удалить
          </button>
        </div>
        <div
          className="right"
        >
          <div
            className="pressure"
          >
            Давление: 
            1015
             hPa
          </div>
          <div
            className="humidity"
          >
            Влажность: 
            100
            %
          </div>
          <div
            className="clouds"
          >
            Облачность: 
            mist
          </div>
          <div
            className="wind"
          >
            Ветер: 
            4
             м/с
          </div>
          <div
            className="coords"
          >
            Координаты: [
            37.62
            , 
            55.75
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Weather in displaying with favourite cities Weather exists and is not loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div
      className="weather"
    >
      <div
        className="left"
      >
        <div>
          Moscow
        </div>
        <img
          src="https://openweathermap.org/img/wn/50n.png"
        />
        <div>
          -269
           °C
        </div>
      </div>
      <div
        className="right"
      >
        <div
          className="pressure"
        >
          Давление: 
          1015
           hPa
        </div>
        <div
          className="humidity"
        >
          Влажность: 
          100
          %
        </div>
        <div
          className="clouds"
        >
          Облачность: 
          mist
        </div>
        <div
          className="wind"
        >
          Ветер: 
          4
           м/с
        </div>
        <div
          className="coords"
        >
          Координаты: [
          37.62
          , 
          55.75
          ]
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    >
      <div
        className="weather"
      >
        <div
          className="left"
        >
          <div>
            Moscow
          </div>
          <img
            src="https://openweathermap.org/img/wn/50n.png"
          />
          <div>
            -269
             °C
          </div>
          <button
            className="button"
            onClick={[Function]}
          >
            Удалить
          </button>
        </div>
        <div
          className="right"
        >
          <div
            className="pressure"
          >
            Давление: 
            1015
             hPa
          </div>
          <div
            className="humidity"
          >
            Влажность: 
            100
            %
          </div>
          <div
            className="clouds"
          >
            Облачность: 
            mist
          </div>
          <div
            className="wind"
          >
            Ветер: 
            4
             м/с
          </div>
          <div
            className="coords"
          >
            Координаты: [
            37.62
            , 
            55.75
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Weather in displaying with favourite cities Weather exists but is loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div>
      Загрузка...
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    >
      <div
        className="weather"
      >
        <div
          className="left"
        >
          <div>
            Moscow
          </div>
          <img
            src="https://openweathermap.org/img/wn/50n.png"
          />
          <div>
            -269
             °C
          </div>
          <button
            className="button"
            onClick={[Function]}
          >
            Удалить
          </button>
        </div>
        <div
          className="right"
        >
          <div
            className="pressure"
          >
            Давление: 
            1015
             hPa
          </div>
          <div
            className="humidity"
          >
            Влажность: 
            100
            %
          </div>
          <div
            className="clouds"
          >
            Облачность: 
            mist
          </div>
          <div
            className="wind"
          >
            Ветер: 
            4
             м/с
          </div>
          <div
            className="coords"
          >
            Координаты: [
            37.62
            , 
            55.75
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Weather in displaying with favourite cities Weather is not exists and is loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div>
      Загрузка...
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    >
      <div
        className="weather"
      >
        <div
          className="left"
        >
          <div>
            Moscow
          </div>
          <img
            src="https://openweathermap.org/img/wn/50n.png"
          />
          <div>
            -269
             °C
          </div>
          <button
            className="button"
            onClick={[Function]}
          >
            Удалить
          </button>
        </div>
        <div
          className="right"
        >
          <div
            className="pressure"
          >
            Давление: 
            1015
             hPa
          </div>
          <div
            className="humidity"
          >
            Влажность: 
            100
            %
          </div>
          <div
            className="clouds"
          >
            Облачность: 
            mist
          </div>
          <div
            className="wind"
          >
            Ветер: 
            4
             м/с
          </div>
          <div
            className="coords"
          >
            Координаты: [
            37.62
            , 
            55.75
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Weather in displaying without favourite cities Some error with displaying weather 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div
      className="error"
    >
      Error: 
      error
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    />
  </div>
</div>
`;

exports[`Weather in displaying without favourite cities Weather exists and is not loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div
      className="weather"
    >
      <div
        className="left"
      >
        <div>
          Moscow
        </div>
        <img
          src="https://openweathermap.org/img/wn/50n.png"
        />
        <div>
          -269
           °C
        </div>
      </div>
      <div
        className="right"
      >
        <div
          className="pressure"
        >
          Давление: 
          1015
           hPa
        </div>
        <div
          className="humidity"
        >
          Влажность: 
          100
          %
        </div>
        <div
          className="clouds"
        >
          Облачность: 
          mist
        </div>
        <div
          className="wind"
        >
          Ветер: 
          4
           м/с
        </div>
        <div
          className="coords"
        >
          Координаты: [
          37.62
          , 
          55.75
          ]
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    />
  </div>
</div>
`;

exports[`Weather in displaying without favourite cities Weather exists but is loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div>
      Загрузка...
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    />
  </div>
</div>
`;

exports[`Weather in displaying without favourite cities Weather is not exists and is loading 1`] = `
<div
  className="App"
>
  <div>
    <div
      className="header_text"
    >
      Погода здесь
    </div>
    <button
      className="header_button"
      onClick={[Function]}
    >
      Обновить местоположение
    </button>
  </div>
  <div
    className="geo_weather"
  >
    <div>
      Загрузка...
    </div>
  </div>
  <div>
    <div>
      <div
        className="fav_cities"
      >
        Избранное
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          className="city_input"
          name="city"
          required={true}
          type="text"
        />
        <input
          className="city_button"
          type="submit"
          value="Добавить"
        />
      </form>
    </div>
    <div
      className="weather"
    />
  </div>
</div>
`;
